fix: Update CSS to use double quotes instead of single quotes, fix import statement in Spotify component and update hide html scrollbar

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -228,23 +228,23 @@ a {
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
-body::-webkit-scrollbar {
+html::-webkit-scrollbar {
   display: none;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
-body {
+html {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
   background-color: #000;
   min-height: 100vh;
 }
 
-no-scrollbar::-webkit-scrollbar {
+.no-scrollbar::-webkit-scrollbar {
   display: none;
 }
 
-no-scrollbar {
+.no-scrollbar {
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
@@ -341,7 +341,7 @@ video {
   padding: 0;
   border: 0;
   font-size: 100%;
-  font-family: 'General Sans', sans-serif;
+  font-family: "General Sans", sans-serif;
   vertical-align: baseline;
 }
 /* HTML5 display-role reset for older browsers */
@@ -373,7 +373,7 @@ blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
+  content: "";
   content: none;
 }
 table {
